# cgarena

./: .env  .gitignore  Cargo.toml  Makefile  README.md  build.rs  schema.sql
assets/: build.sh  cgarena_config.toml  cgarena_config.yaml  default_config.toml  play_game.py  run.sh
cg-arena-ui/: index.html  package-lock.json  package.json  tsconfig.app.json
cg-arena-ui/src/: App.tsx  index.css  main.tsx
cg-arena-ui/src/api/: index.ts
cg-arena-ui/src/components/: AppNavbar.tsx  BotOverview.tsx  BotSelector.tsx  ChartDialog.tsx  ConfirmDialog.tsx  CreateLeaderboardDialog.tsx  DialogsProvider.tsx  ExampleSeedsDialog.tsx  Identicon.tsx  Leaderboard.tsx  PatchLeaderboardDialog.tsx  RenameBotDialog.tsx  RenameLeaderboardDialog.tsx  SubmitBotDialog.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx  ViewCodeDialog.tsx  ViewContentDialog.tsx
cg-arena-ui/src/contexts/: DialogsContext.ts  ThemeContext.ts
cg-arena-ui/src/hooks/: useAppLogic.ts  useAppStore.ts  useDialog.ts  useDialogs.ts  useEnsureValidSelectedBot.ts  useTheme.ts
cg-arena-ui/src/models/: index.ts
cg-arena-ui/src/pages/: ConfigPage.tsx  HomePage.tsx
crates/api/: Cargo.toml
crates/api/src/: app.rs  config.rs  errors.rs  lib.rs
crates/api/src/routes/: bot.rs  match.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/entity/: Cargo.toml
crates/entity/src/: bot.rs  lib.rs  match.rs  participation.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20231206_080327_create_bots_table.rs  m20231206_091953_create_matches_table.rs  m20231206_095922_create_participations_table.rs  m20231207_020219_add_deleted_to_bots.rs  m20231207_031600_add_tag_to_matches.rs
crates/server/: Cargo.toml
crates/server/assets/: cgarena_config.toml
crates/server/src/: app.rs  arena.rs  config.rs  errors.rs  lib.rs
crates/server/src/models/: worker.rs
crates/server/src/routes/: bot.rs  match.rs  mod.rs
crates/server/src/services/: arena.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  worker.rs  worker_thread.rs
docs/: configuration.md  example_codingame_setup.md  index.md  making_bt_compatible_referee.md  match_attributes_and_filters.md
docs/sequence/: running_match.puml  submitting_bot.puml
migrations/: 20240604145746_create_bots_table.sql  20240604145746_initial_schema.sql  20241214095339_initial.sql  20241219033443_create_trigger_for_match_deletion.sql  20250702144018_add_match_attributes_column.sql  20250707014236_add_match_attributes_table.sql  20250711153917_add_leaderboards_table.sql  20250712181508_create_match_indexes.sql
src/: arena.rs  arena_commands.rs  arena_handle.rs  arena_server.rs  arena_tests.rs  async_leaderboard.rs  attribute_index.rs  build_manager.rs  chart.rs  config.rs  db.rs  domain.rs  embedded_worker.rs  lib.rs  main.rs  match_manager.rs  match_result_processor.rs  match_scheduler.rs  matchmaking.rs  model.rs  persistence.rs  ranking.rs  server.rs  worker.rs  worker_manager.rs
src/api/: app.rs  errors.rs  mod.rs  web_router.rs
src/api/models/: bot_minimal_response.rs  build_response.rs  create_bot_request.rs  fetch_leaderboard_response.rs  fetch_status_response.rs  leaderboard_attribute_index.rs  leaderboard_bot_overview_response.rs  leaderboard_item_response.rs  mod.rs  rename_bot_request.rs
src/api/routes/: bots.rs  charts.rs  create_bot.rs  delete_bot.rs  enable_matchmaking.rs  fetch_bot_leaderboard.rs  fetch_bots.rs  fetch_status.rs  leaderboards.rs  mod.rs  rename_bot.rs
src/app/use_cases/: create_bot.rs  delete_bot.rs  mod.rs  rename_bot.rs
src/assets/: cgarena_config.toml
src/db/: memory_db.rs  mod.rs
src/domain/: bot.rs  bot_id.rs  bot_name.rs  build.rs  build_status.rs  computed_stats.rs  language.rs  leaderboard.rs  leaderboard_id.rs  leaderboard_name.rs  match.rs  match_attribute.rs  match_filter.rs  match_id.rs  mod.rs  rating.rs  source_code.rs  worker_name.rs
src/models/: bot.rs  language.rs  match.rs  mod.rs  worker.rs
src/ranking/: algorithm.rs  mod.rs  ranker.rs
src/ranking/algorithms/: bradley_terry.rs  elo.rs  mod.rs  openskill.rs  trueskill.rs
src/rating/: mod.rs  true_skill.rs
src/server/: app.rs  arena.rs  bot.rs  config.rs  errors.rs  mod.rs
src/server/controllers/: bot.rs
src/server/entities/: bot.rs  job.rs  match.rs  mod.rs  participation.rs
src/server/enums/: language.rs  mod.rs
src/server/routes/: bot.rs  job.rs  mod.rs
src/server/services/: arena.rs  arena_service.rs  bot_service.rs  mod.rs
src/server/utils/: custom_response.rs
src/server/workers/: embedded.rs  mod.rs  worker_thread.rs
src/services/: arena_service.rs  bot_service.rs  exec.rs  mod.rs  tool.rs
src/services/cli_service/: bot_subcommand_handler.rs  mod.rs
src/services/db/: json_db.rs  mod.rs
src/statistics/: computed_stats.rs  match_filter.rs  mod.rs  statistic.rs
src/worker/: mod.rs  worker.rs
web-ui/: package-lock.json  package.json
web-ui/src/: index.tsx
web-ui/src/components/: candidate_vs_submitted.tsx  workers_view.tsx
web-ui/src/routes/: add_bot.tsx  bots.tsx  root.tsx
web-ui/src/services/: api_service.ts
