[package]
name = "server"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.3.2", features = ["v4", "serde"]}
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"]}
dotenvy = "0.15"
toml = "0.8.0"
skillratings = { version = "0.26.0", features = ["serde"] }
tabled = "0.14.0"
fs2 = "0.4.3"
reqwest = "0.11.17"
tokio = { version = "1.28.1", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0"
sysinfo = "0.29.2"
tempdir = "0.3.7"
axum = "0.7.2"
log = "0.4.19"
simplelog = "0.12.1"
axum-macros = "0.4.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
sea-orm = { version = "0.12.3", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
sea-query = { version = "0.30.2", features = ["backend-sqlite"] }
validator = { version = "0.16.1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bytes = "1.5.0"
mime = "0.3"
anyhow = "1.0"
rand = "0.8.5"

migration = { path = "../migration" }
entity = { path = "../entity" }
worker = { path = "../worker" }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
