[package]
name = "server"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true

sea-orm = { version = "0.12.3", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
sea-query = { version = "0.30.2", features = ["backend-sqlite"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }

api = { path = "../api" }
migration = { path = "../migration" }